Setted up mssql and entity, Closes #3

--- a/SoulMate.API/appsettings.json
+++ b/SoulMate.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+
+    "SoulmateDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SoulmateDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
